tests/good/import-arrays.c
#include <stdio.h>

int main()
{
    char hello[5] = { 'h', 'e', 'l', 'l', 'o' };
    printf(hello);

    printf("world");

    return 0;
}
