tests/bad/stdio-printf.c
int main()
{
    char hello[5] = { 'h', 'e', 'l', 'l', 'o' };
    printf(hello);

    return 0;
}
